# docling_surya

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docling_surya/: __init__.py  plugin.py
examples/: docling_with_custom_models.py
tests/: test_surya_ocr.py
